--- a/src/group1/templates/exam_result.html
+++ b/src/group1/templates/exam_result.html
@@ -1,35 +1,39 @@
 {% extends "base.html" %} {% load indexFilter %} {% block content %}
 <section class="p-10 flex justify-center items-center">
-   <div
-      class="flex flex-col bg-neutral w-[1280px] max-w-[1280px] p-5 rounded-md"
-      >
-      <div class="w-full flex justify-between pb-5">
-        <h1>{{exam.title}} - Result</h1>
+  <div
+    class="flex flex-col bg-neutral w-[1280px] max-w-[1280px] p-5 rounded-md"
+  >
+    <div class="w-full flex justify-between pb-5">
+      <h1>{{exam.title}} - Result</h1>
+    </div>
+    <div class="w-full flex justify-between pb-5">
+      <h1>Your Grade: {{ grade }}%</h1>
+    </div>
+    <ul>
+      {% for record in student_records %}
+      <hr />
+      <li class="p-5">
+        <strong>Question:</strong> {{ record.question.question_text }}<br />
+        <strong>Your Answer:</strong>
+        {% if record.question.question_type == 'MC' %} {{
+        record.question.options|index:record.answer }}<br />
+        {% elif record.question.question_type == 'TX' %} {{ record.answer}} {% endif %}
+        <strong>Correct Answer:</strong>
+        {% if record.question.question_type == 'MC' %}
+        {{ record.question.options|index:record.question.correct_answer }}
+        {% elif record.question.question_type == 'TX' %} {{ record.question.correct_answer}} {% endif %}
+      </li>
+      {% endfor %}
+    </ul>
+    <form method="post">
+      {% csrf_token %}
+      <div class="w-full flex justify-between">
+        <button type="submit" name="retake_exam" class="btn btn-Neutral">
+          Retake Exam
+        </button>
+        <a href="{% url 'exam_list' %}" class="btn btn-success">Go to Exams</a>
       </div>
-      <div class="w-full flex justify-between pb-5">
-        <h1>Your Grade: {{ grade }}%</h1>
-      </div>
-      <ul>
-         {% for record in student_records %}
-         <hr/>
-         <li class="p-5">
-            <strong>Question:</strong> {{ record.question.question_text }}<br />
-            <strong>Your Answer:</strong>
-            {{ record.question.options|index:record.answer }}<br />
-            <strong>Correct Answer:</strong>
-            {{ record.question.options|index:record.question.correct_answer }}
-         </li>
-         {% endfor %}
-      </ul>
-      <form method="post">
-         {% csrf_token %}
-         <div class="w-full flex justify-between">
-            <button type="submit" name="retake_exam" class="btn btn-Neutral">
-            Retake Exam
-            </button>
-            <a {% url 'exam_list' %}class="btn btn-success">Go to Exams</a>
-         </div>
-      </form>
-   </div>
+    </form>
+  </div>
 </section>
 {% endblock %}
